# sinalytix

./: .gitignore  DEVIATIONS.md  LEGACY_HARVEST.md  TECHNICAL_DEBT.md  package.json  pnpm-lock.yaml  turbo.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-api.yml
apps/caregiver/: app.json  package.json
apps/family/: app.json  metro.config.js  package.json
apps/patient/: app.json  eas.json  package.json
docs/api/: endpoint-map.md
docs/spec/: Admin_Panel_PRD.md  Caregiver__RECONCILED.md  Core_Infra_PRD_Module1__RECONCILED.md  Core_Infra_PRD_Module2_API.md  Core_Infra_PRD_Module3_Backend.md  Core_Infra_PRD_Module4_Agent.md  Family_App__RECONCILED.md  HCP_Combined__RECONCILED.md  Hasta_Patient__RECONCILED.md  README.md  Sinalytix_Canonical_Data_Dictionary.md  Sinalytix_Developer_Teslim_Notu.md  Sinalytix_Sozlukce.md  (+7 more)
services/api/: .env.example  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: a79155ac1866_v1_tables.py  b3f2a1c8d9e0_caregiver_v0.py
services/api/app/: main.py
services/api/app/core/: config.py  database.py  deps.py  redis.py  security.py
services/api/app/models/: __init__.py  account.py  agent.py  base.py  call.py  caregiver.py  consent.py  emergency_contact.py  enums.py  health.py  messaging.py  notification.py  task.py  user.py
services/api/app/routers/: auth.py  calls.py  caregiver.py  family.py  health.py  messaging.py  notifications.py  shifts.py  sina.py  tasks.py
services/api/app/schemas/: auth.py  calls.py  caregiver.py  health.py  messaging.py  notifications.py  sina.py  tasks.py
services/api/app/services/: auth_service.py  calls_service.py  caregiver_service.py  health_service.py  messaging_service.py  notifications_service.py  shift_service.py  sina_service.py  task_service.py
(+194 files in other folders)
